# solrem

./: .gitignore  ALL_FIXED_SUMMARY.md  CONNECTION_SUCCESS.md  ERROR_ANIMATION_COMPLETE.md  ERROR_STATE_ADDED.md  FIX_RLS_VIEWS.md  MIGRATION_COMPLETE.md  MOBILE_WALLET_FIX.md  MOBILE_WALLET_QUICK.md  MODAL_VISIBILITY_FIX.md  ONBOARDING_FIX.md  ONBOARDING_QUICK_FIX.md  PRODUCTION_MIGRATION_PROGRESS.md  PRODUCTION_READY_SUMMARY.md  PROJECT_SUMMARY.mc  PUSHED_TO_GIT.md  README.md  SETUP_COMPLETE.md  SINGLE_POPUP_FIXED.md  SUCCESS_ANIMATION_FIX.md  SUPABASE_AUTH_SETUP.md  SUPABASE_QUICK_SETUP.md  SUPABASE_SETUP.md  TEST_SUPABASE_CONNECTION.md  UI_IMPROVEMENTS.md  UI_POLISH_COMPLETE.md  VIEWS_RLS_FIXED.md  WALLET_CONNECT_FIX.md  WALLET_ERROR_DEBUG.md  WALLET_FIX_COMPLETE.md  WALLET_STATE_SYNC_FIXED.md  app.json  package-lock.json  package.json  supabase_migration.sql
.cursor/: scratchpad.md
UI v0/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
UI-zah/: App.tsx  QUICK_START.md  README.md  constants.mock.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts
android/: gradle.properties  settings.gradle
backend/: .env  README.md  package-lock.json  package.json  server.js  simple-server.js
ios/: Podfile
solana-program/: Anchor.toml  Cargo.toml  README.md
solana-program/programs/solrem-prediction-markets/: Cargo.toml
solana-program/programs/solrem-prediction-markets/src/: lib.rs
solana-program/tests/: solrem-prediction-markets.ts
ui-next/: package-lock.json  package.json  (+1 more)
(+76 files in other folders)
