[package]
name = "solrem-prediction-markets"
version = "0.1.0"
description = "SolREM Prediction Markets Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrem_prediction_markets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
